# rating_systems

./: .gitignore  README.md  __init__.py  pyproject.toml
base/: __init__.py  player_ratings.py  rating_system.py
data/: __init__.py  dataset.py  types.py
docs/: contextual_vector_ratings.md  weighted_ratings.tex
evaluation/: backtester.py  metrics.py
rating_systems/: __init__.py  __main__.py
rating_systems/base/: __init__.py  player_ratings.py  rating_system.py
rating_systems/cli/: __init__.py  main.py
rating_systems/data/: __init__.py  dataset.py  types.py
rating_systems/evaluation/: __init__.py  backtester.py  metrics.py  optimizer.py
rating_systems/results/: __init__.py  fitted_ratings.py
rating_systems/systems/: __init__.py
rating_systems/systems/elo/: __init__.py  _numba_core.py  elo.py  elo_torch.py
rating_systems/systems/glicko/: __init__.py  _numba_core.py  glicko.py  glicko_torch.py
rating_systems/systems/glicko2/: __init__.py  _numba_core.py  glicko2.py  glicko2_torch.py
rating_systems/systems/stephenson/: __init__.py  _numba_core.py  stephenson.py
rating_systems/systems/trueskill/: __init__.py  _numba_core.py  trueskill.py
rating_systems/systems/trueskill_through_time/: __init__.py  _numba_core.py  _team_numba_core.py  surface_ttt.py  ttt.py  ttt_torch.py
rating_systems/systems/welo/: __init__.py  _numba_core.py  welo.py
rating_systems/systems/wglicko/: __init__.py  _numba_core.py  (+1 more)
rating_systems/utils/: __init__.py  device.py
systems/: __init__.py
systems/elo/: elo.py
systems/glicko/: __init__.py  glicko.py
systems/glicko2/: __init__.py  glicko2.py
systems/trueskill_through_time/: __init__.py  gaussian.py
systems/whr/: whr.py
tests/: conftest.py  test_rating_systems.py  test_whr_optimizations.py  test_whr_warm_start.py
utils/: device.py
(+22 files in other folders)
